--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>PIXI memory leak test</title>
   </head>
   <body>
+    <div>
+        <button id="run-without-fix">run without fix</button>
+        <button id="run-with-fix">run with fix</button>
+    </div>
+
     <div id="count"></div>
-    <button id="run">run</button>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
